[package]
name = "mmalloc"
version = "0.1.0"
authors = ["Jan Bujak <j@exia.io>"]
repository = "https://github.com/koute/mmalloc"
homepage = "https://github.com/koute/mmalloc"
documentation = "https://docs.rs/mmalloc/*/mmalloc/"
license = "MIT/Apache-2.0"
readme = "README.md"
keywords = ["mmap", "allocator"]
description = "A simple mmap-based allocator"

[lib]
crate-type = ["rlib"]

[dependencies]
sc = "0.1"

[features]
default = ["allocator"]
allocator = []
